Improved security configuration.
Web security setup now lives inside the security.web package. The move required the introduction of a JwtConfiguration exposed from the security package to avoid the entire JwtProperties to become public. JwtProperties itself now allows to configure a quarano.jwt.allowedOrigins to define the hosts that are allowed to issue CORS requests. Deployments should define that property in their environment as the default, *, allows everyone to issue CORS requests. We should probably make this configuration non-optional at some point.

AuthenticationController now also exposes the access token via the X-Auth-Token header as that's apparently the way of communicating bearer tokens very common in the OAuth world  [0], although the Bearer token RFC [1] doesn't actually mention it in the first place.

[0] https://stackoverflow.com/questions/39017297/what-is-difference-between-x-auth-token-vs-authorisation-headers-which-is-prefer
[1] https://tools.ietf.org/html/rfc6750